--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -28,14 +28,7 @@ jobs:
       - name: Run CMake Configure
         working-directory: ${{runner.workspace}}/build
         run: |
-          cmake -S ${GITHUB_WORKSPACE} \
-                -A ${{matrix.platform}} \
-                -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
-                -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES="${GITHUB_WORKSPACE}/cmake/conan_provider.cmake" \
-                -DENABLE_TESTS=True \
-                -DENABLE_COVERAGE=True \
-                -DCMAKE_WINDOWS_EXPORT_ALL_SYMBOLS=True \
-                -DBUILD_SHARED_LIBS=True
+          cmake -S ${GITHUB_WORKSPACE} -A ${{matrix.platform}} -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES="${GITHUB_WORKSPACE}/cmake/conan_provider.cmake" -DENABLE_TESTS=True -DENABLE_COVERAGE=True -DCMAKE_WINDOWS_EXPORT_ALL_SYMBOLS=True -DBUILD_SHARED_LIBS=True
 
 #      - name: Run CMake Configure
 #        shell: bash
