--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,11 +25,19 @@ set_compiler_options(${TEST_NAME})
 find_package(Catch2 REQUIRED)
 find_package(fmt REQUIRED)
 
+message(STATUS "
+Catch2_INCLUDE_DIRS: ${Catch2_INCLUDE_DIRS}
+Catch2_LIBRARIES: ${Catch2_LIBRARIES}
+fmt_INCLUDE_DIRS: ${fmt_INCLUDE_DIRS}
+fmt_LIBRARIES: ${fmt_LIBRARIES}
+PROJECT_NAME: ${PROJECT_NAME}
+")
 
 ## Target
 target_include_directories(${TEST_NAME}
   PRIVATE SYSTEM
-    ${catch2_INCLUDE_DIRS}
+    ${Catch2_INCLUDE_DIRS}
+    ${fmt_INCLUDE_DIRS}
   PRIVATE
     ../include
 )
